@@ -1,6 +1,11 @@
 # ChangeLog for net-firewall/shorewall-shell
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall-shell/Attic/ChangeLog,v 1.27 2009/04/03 09:42:11 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall-shell/Attic/ChangeLog,v 1.28 2009/05/15 09:17:07 pva Exp $
+
+*shorewall-shell-4.2.8 (15 May 2009)
+
+  15 May 2009; Peter Volkov <pva@gentoo.org> +shorewall-shell-4.2.8.ebuild:
+  Version bump, bug #269578, thank Vieri for maintaining this package.
 
 *shorewall-shell-4.2.7 (03 Apr 2009)
 
